--- a/scss/partials/sections/_projects.scss
+++ b/scss/partials/sections/_projects.scss
@@ -5,6 +5,9 @@
     width: 92%;
     margin: 0 auto;
     max-width: none;
+    @media screen and (min-width: 1750px) {
+        justify-content: space-evenly;
+    }
 }
 
 .project {
@@ -12,6 +15,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+    max-width: 640px;
     height: auto;
     margin: 20px 0;
     h3 {
